Se agrego un comentario el cual explica como se envía los consumer entre report-ms y report-listener

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ cloud:
         brokers: localhost:9092
     function:
       binding:
-        consumerReport-out-0:
+        consumerReport-out-0: # consumerReport-out -> consumerReport <- consumerReport-in
           destination: consumerReport
 
 server:
